# chestnut

./: Cargo.toml  main
base/: Cargo.toml
base/src/: board.rs  board_iter.rs  color.rs  fen.rs  lib.rs  moves.rs  piece.rs  player.rs  prelude.rs  slide.rs  special_rules.rs  sq.rs  state.rs  uci_bridge.rs
core/: Cargo.toml
core/src/: board.rs  board_iter.rs  color.rs  debug.rs  en_passant.rs  lib.rs  moves.rs  prelude.rs  slide.rs  sq.rs  state.rs  zobrist.rs
engine/: Cargo.toml
engine/src/: engine.rs  engines.rs  lib.rs  random_engine.rs  uci.rs
games/: french_defense.txt  french_defense_short.txt
src/: board.rs  cli.rs  color.rs  game.rs  main.rs  movement.rs  moves.rs  piece.rs  player.rs  slide.rs  sq.rs  state.rs  ui.rs  user-move.rs  user_move.rs
uci/: Cargo.toml
uci/src/: bridge.rs  engine.rs  fen.rs  lib.rs
