[package]
name = "rusty-chess"
version = "0.1.0"
authors = ["Vincent-Carrier <vincentcarrier15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
base = { path="base" }
engine = { path="engine" }
vampirc-uci = "0.8.3"
regex = "1.3.1"
lazy_static = "1.4.0"
