[package]
name = "base"
version = "0.1.0"
authors = ["Vincent-Carrier <vincentcarrier15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
strum = "0.17.1"
strum_macros = "0.17.1"
vampirc-uci = "0.8.3"
